horizontal scroll fixed

--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@
   opacity: 0;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+#page-wrapper {
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
   overflow-y: scroll;
